Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Asignado_a__c.field-meta.xml
<CustomField>
    <fullName>Asignado_a__c</fullName>
    <description>Persona responsable por la resolucion del problema</description>
    <inlineHelpText>Persona responsable por la resolucion del problema</inlineHelpText>
    <label>Asignado a</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
                <default>true</default>
                <label>-</label>
            </value>
            <value>
                <fullName>Amena</fullName>
            </value>
            <value>
                <fullName>Aquilano</fullName>
            </value>
            <value>
                <fullName>Arias</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
            </value>
            <value>
                <fullName>Garmendia</fullName>
            </value>
            <value>
                <fullName>Goria</fullName>
            </value>
            <value>
                <fullName>Nieto</fullName>
            </value>
            <value>
                <fullName>Pernícoli</fullName>
            </value>
            <value>
                <fullName>Poli</fullName>
            </value>
            <value>
                <fullName>Laura Nuñez</fullName>
            </value>
            <value>
                <fullName>Daniela Bursa</fullName>
            </value>
            <value>
                <fullName>G. Rossi</fullName>
            </value>
            <value>
                <fullName>Juan Manuel (Xioma)</fullName>
            </value>
            <value>
                <fullName>Carlos Lizazu</fullName>
            </value>
            <value>
                <fullName>Santiago Romero</fullName>
            </value>
            <value>
                <fullName>Sebastián Vivot</fullName>
            </value>
            <value>
                <fullName>Marcela Martinez (Xioma)</fullName>
            </value>
            <value>
                <fullName>Victoria Lagoa (Xioma)</fullName>
            </value>
            <value>
                <fullName>Klenzi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>