Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>