Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Prioridad Asignada</fullName>
            </value>
            <value>
                <fullName>Derivado a quien resuelve</fullName>
            </value>
            <value>
                <fullName>En Revision</fullName>
            </value>
            <value>
                <fullName>En Progreso QAS</fullName>
            </value>
            <value>
                <fullName>OK DM- Pasar a Productivo</fullName>
            </value>
            <value>
                <fullName>Completo</fullName>
            </value>
            <value>
                <fullName>Postergado DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>