Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion__c</fullName>
    <description>Fecha real de creacion del incidente</description>
    <inlineHelpText>Fecha real de creacion del incidente</inlineHelpText>
    <label>Fecha de creacion</label>
    <required>true</required>
    <type>Date</type>
</CustomField>