Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Fecha_Limite_Solucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Limite_Solucion__c</fullName>
    <description>Definir la fecha que tiene que estar en funcionamiento para no ocacionar problemas en la operacion</description>
    <inlineHelpText>Definir la fecha que tiene que estar en funcionamiento para no ocacionar problemas en la operacion</inlineHelpText>
    <label>Fecha Limite Solucion</label>
    <required>true</required>
    <type>Date</type>
</CustomField>