Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Fecha_Objetivo_Analisis__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Objetivo_Analisis__c</fullName>
    <description>Fecha en que se debe terminar el analisis</description>
    <inlineHelpText>Fecha en que se debe terminar el analisis</inlineHelpText>
    <label>Fecha Objetivo Analisis</label>
    <type>Date</type>
</CustomField>