Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Informado_por__c.field-meta.xml
<CustomField>
    <fullName>Informado_por__c</fullName>
    <description>Es quien detecta, releva, documenta e informa el incidente.</description>
    <inlineHelpText>Es quien detecta, releva, documenta e informa el incidente.</inlineHelpText>
    <label>Informado por</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>