Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Modulo_SAP__c.field-meta.xml
<CustomField>
    <fullName>Modulo_SAP__c</fullName>
    <label>Modulo SAP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SD</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>QM</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>