Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Nombre_Entregable__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Entregable__c</fullName>
    <description>Nombre de los entregables BBP especificaciones funcionales que puede modificarse con este incidente</description>
    <inlineHelpText>Nombre de los entregables BBP especificaciones funcionales que puede modificarse con este incidente</inlineHelpText>
    <label>Nombre Entregable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>