Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>