Salesforce/main/default/main/default/objects/INCIDENTES_SISTEMAS__c/fields/Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Resolucion__c</fullName>
    <description>Texto detallado de la solucion</description>
    <inlineHelpText>Texto detallado de la solucion</inlineHelpText>
    <label>Resolucion</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>